@@ -1,3 +1,7 @@
+2019-03-22         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* inplace.c (_XOPEN_SOURCE): Define to 700 only on Solaris.
+
 2019-03-17         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* inplace.c (_XOPEN_SOURCE): Define to 500 so will build
